--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>Sample flexbox example</h1>
+      <h1>Sample Exercise</h1>
     </header>
 
     <section>
